Bug 150706 - Export as PDF warnings in console with debug LO
Summary: Export as PDF warnings in console with debug LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.6
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2022-08-30 20:01 UTC by BogdanB
Modified: 2023-02-06 12:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-08-30 20:01:21 UTC
Description:
Open a new Writer document, type "A" and press Export Directly as PDF.

If I save the document I get in terminal messages:
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1134: Handle unknown control 210
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1372: enable unknown control 210
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1134: Handle unknown control 1
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1386: Set label on unknown control 1
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1134: Handle unknown control 6
warn:vcl.gtk:68739:68739:vcl/unx/gtk3/fpicker/SalGtkFilePicker.cxx:1386: Set label on unknown control 6

But if I press Cancel in the window that offers me a place to save:
warn:sfx.doc:68739:68739:sfx2/source/doc/objserv.cxx:995: Fatal IO error during save com.sun.star.task.ErrorCodeIOException message: "ModelData_Impl::OutputFileDialog: ERRCODE_IO_ABORT at /home/tdf/lode/jenkins/workspace/lo_gerrit/tb/src_master/sfx2/source/doc/guisaveas.cxx:1001" errcode: 283


Steps to Reproduce:
1. See description


Actual Results:
Fatal IO error

Expected Results:
NO Fatal IO error


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 4c96abd81460977d413d4d28e891bbbac5769ede
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2022-09-05 14:56:38 UTC
No repro in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3e544b6938ee509a4f6df4c2e2996d71ce072506
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

Linux or even GTK only?
Comment 2 BogdanB 2022-09-06 08:42:12 UTC
Roman, I'm using the dbg version of LibreOffice with messages in terminal.
Comment 3 sivanesh 2022-09-11 06:17:22 UTC
NOT REPRODUCED
STEP1:OPEN LIBRE OFFICE WRITER VERSION 7.4.0 alpha x86_64
STEP 2:Type A and click file and then export and change format as pdf and save.
STEP 3:It exported successfully
STEP 4:OPEN LIBRE OFFICE WRITER VERSION 6.4.7.2
STEP 5:Type A and click file and then export and change format as pdf and save.
STEP 6:It exported successfully

ENVIRONMENT: Linux mint 20.3 
             Architecture:x86-64
Comment 4 BogdanB 2022-09-11 06:49:38 UTC
(In reply to sivanesh from comment #3)
> NOT REPRODUCED
> STEP1:OPEN LIBRE OFFICE WRITER VERSION 7.4.0 alpha x86_64
> STEP 2:Type A and click file and then export and change format as pdf and
> save.
> STEP 3:It exported successfully
> STEP 4:OPEN LIBRE OFFICE WRITER VERSION 6.4.7.2
> STEP 5:Type A and click file and then export and change format as pdf and
> save.
> STEP 6:It exported successfully
> 
> ENVIRONMENT: Linux mint 20.3 
>              Architecture:x86-64

I am using a dbg version with terminal attached to LibreOffice, so I get output to terminal while running LibreOffice.
Comment 5 Kavin 2022-09-11 07:39:49 UTC
NOT REPRODUCED


Steps followed:

Open Libre office

Type A and click file and then export and change format as pdf and save.

It exported successfully.



ENVIRONNMENT:

Libre office 7.4.0.0 alpha

Linux mint 20.3
Comment 6 Caolán McNamara 2022-10-06 09:41:49 UTC
These dbgutil debugging messages are fairly common and not visible in the normal user release so it's probably not worth logging bugs about them unless there is a related problem. Though in this case I'll quieten the "cancel" warning and fill in some missing bits in the gtk export dialog case.
Comment 7 Commit Notification 2022-10-06 10:34:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1da3406a8e97934615b5b644cbb81bf3108143ec

Related: tdf#150706 add OK and CANCEL to known controls

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-10-06 10:34:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c7cbaf19a5108e3870df6556c16ef25710011a2

Related: tdf#150706 don't warn about missing LISTBOX_FILTER_LABEL

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-10-06 11:23:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b5ebf0866ca471c9a5944d96e1190887b58c8b8

Resolves: tdf#150706 don't warn about user cancelling export

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-10-06 11:24:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22c66999008aec900c49e5c6caf9a14d3e4e2969

Related: tdf#150706 don't warn about already enabled LISTBOX_FILTER_LABEL

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2022-12-30 05:30:03 UTC
Thanks, Caolan, a clean terminal now. No Fatal IO error.

Verified with
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9e3e20bfd102880d12384892eaeca094c38a519
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 12 Commit Notification 2023-02-06 12:24:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/4f6cabae397424caa1edf7cc084f5f458b9e5cb7

Related: tdf#150706 & tdf#153330 add OK and CANCEL to known controls

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.