Related: tdf#150706 add OK and CANCEL to known controls

which results that we can rename "Save" to "Export" in pdf export dialog

Change-Id: I8186a9ea3d18bfb383b07ba54f2fd7a5cd71e7b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141004
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>